--- a/package.json
+++ b/package.json
@@ -5,7 +5,5 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2"
   },
-  "dependencies": {
-    "global": "^4.4.0"
-  }
+  "dependencies": {}
 }
